fixed table styling to not affect CSS Variables, removed gap below CSS Variables title on smaller screens

--- a/gatsby-theme-patternfly-org/helpers/commonComponents.css
+++ b/gatsby-theme-patternfly-org/helpers/commonComponents.css
@@ -23,10 +23,22 @@ h3.ws-title {
   background: #f1f1f1;
 }
 
-.ws-section table td,
-.ws-section table th,
-.ws-section table tr {
+#examples ~ table td,
+#examples ~ table th,
+#examples ~ table tr {
   padding: .5em;
   border: 1px solid #ccc;
   vertical-align: top;
+}
+
+@media screen and (max-width: 1450px) {
+  table.pf-m-grid-2xl.pf-c-table tbody:first-of-type {
+    border-top: 0;
+  }
+}
+
+@media screen and (max-width: 1450px) {
+  table.pf-m-grid-2xl.pf-c-table tr:not(.pf-c-table__expandable-row) {
+    border-bottom: 0;
+  }
 }
